[package]
name = "dlt_log"
version = "0.1.6"
description = "Log crate adapter for integrating with the Diagnostic Log and Trace (DLT) system"
license = "MIT"
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/rusty-projects/dlt_log-rs"
keywords = ["dlt", "log", "logging", "adapter"]
categories = ["development-tools::debugging"]
exclude = ["doc/*.png"]

[build-dependencies]
bindgen = "0.72"

[dependencies]
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
regex = "1.12"
